Fixed CSS sizes for landmark event ticket boxes on mobile devices.

--- a/css/kacs.less
+++ b/css/kacs.less
@@ -29,6 +29,10 @@ table {
     h2 {
 	margin-top: 5px;
     }
+    .paypal-box {
+	.make-sm-column(6);
+	.make-md-column(5);
+    }
 }
 
 /* Global body styles */
